# BitNet

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements-dashboard.txt  run_inference.py  run_inference_server.py  setup_env.py
.github/ai/: notes.md
.github/workflows/: ci.yml  docs-check.yml
bitnet/: __init__.py  cli_utils.py  runtime.py  supervisor.py  telemetry.py
bitnet/dashboard/: __init__.py  app.py  telemetry.py  theme.py
bitnet/dashboard/static/: app.js  index.html  styles.css
docs/: CHANGELOG.md  api-reference.md  architecture.md  deployment.md  docs-review-checklist.md  documentation-review-checklist.md  interface_requirements.md  iteration-log.md  runtime_supervisor.md  system-requirements.md  system-roadmap.md  telemetry-dashboards.md
infra/: README.md
infra/docker/: bitnet-edge.Dockerfile  bitnet-runtime.Dockerfile
infra/github/workflows/: perf-regression.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
src/: CMakeLists.txt
tests/: performance_plugin.py  requirements-test.txt  test_cli_properties.py  test_e2e_benchmark.py  test_gpu_kernel_unit.py  test_integration_kernels.py  test_performance_profiles.py  test_runtime.py  test_setup_env.py  test_supervisor.py  test_supervisor_properties.py  test_telemetry.py
tests/integration/: test_supervisor_chaos.py  test_supervisor_drivers.py
tests/integration/cpp/: CMakeLists.txt  cpu_integration_test.cpp  gpu_integration_test.cu
tests/integration/fixtures/: cpu_linear_fixture.gguf  gpu_linear_fixture.gguf
tools/: check_docs_sync.py  telemetry_tui.py  telemetry_web.py
utils/: check_docs_sync.py  e2e_benchmark.py  generate_api_reference.py  generate_architecture_docs.py  generate_changelog.py
